Fix gap between footer social meadi icons

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -105,7 +105,7 @@ body {
 }
 
 .footer-icons i {
-    padding: 10px;
-    width: auto;
+    margin-right: 0.5rem;
+    margin-left: 0.5rem;
     float: right;
 }
